remove mosn binary

--- a/go-plugin/doc/1.plugin-prepare.md
+++ b/go-plugin/doc/1.plugin-prepare.md
@@ -107,13 +107,14 @@ make ant
 以下编译命令执行都在go-plugin根项目中执行，编译插件语法：
 
 ```shell
-make [module] plugin=[plugin-name]
-# module: 
-# 取值codec、filter和trans, 分别代表协议插件、拦截器插件和协议转换插件
+make [codec|filter|trans] plugin=[plugin-name]
+# 取值codec: 代表编译协议插件
+# 取值filter: 代表编译拦截器插件
+# 取值trans: 代表编译协议转换插件
 
 # plugin-name:
-# 代表插件的名称, 当module取值为filter或者trans时，允许以逗号分隔指定多个插件名称，脚手架同时编译多个插件
-# 当module取值为filter是时，逗号分隔的插件名称代表拦截器执行的先后顺序
+# 代表插件的名称, 当编译类型取值为filter或者trans时，允许以逗号分隔指定多个插件名称，脚手架同时编译多个插件
+# 当编译类型取值为filter时，逗号分隔的插件名称代表拦截器执行的先后顺序
 ```
 
 编译示例，比如编译bolt协议插件：
@@ -224,12 +225,13 @@ make start
 接下来介绍如何在本地打包插件代码，方便后续正式环境使用。和编译插件类似，以下打包命令执行都在go-plugin根项目中执行，打包插件语法：
 
 ```shell
-make pkg-[module] plugin=[plugin-name]
-# module: 
-# 取值codec、filter和trans, 分别代表协议插件、拦截器插件和协议转换插件
+make pkg-[codec|filter|trans] plugin=[plugin-name]
+# 取值codec: 代表打包协议插件
+# 取值filter: 代表打包拦截器插件
+# 取值trans: 代表打包协议转换插件
 
 # plugin-name:
-# 代表插件的名称, 当module取值为filter或者trans时，允许以逗号分隔指定多个插件名称，脚手架同时打包多个插件
+# 代表插件的名称, 当打包类型是filter或者trans时，允许以逗号分隔指定多个插件名称，脚手架同时打包多个插件
 ```
 
 和编译插件区别，在模块前缀加了pkg前缀标识打包，用来将插件打包成.zip文件，用于在控制台上传。
