update mosn binary

--- a/go-plugin/doc/1.plugin-prepare.md
+++ b/go-plugin/doc/1.plugin-prepare.md
@@ -93,8 +93,11 @@ git clone https://github.com/zonghaishang/extensions.git
 
 ### 1.2.1 编译mosn
 
-目前脚手架文件`go-plugin/build/sidecar/binary/mosn` 包含了调试符号的可执行文件，可以通过容器直接启动和调试。如果商业版mosn代码有变更，可以通过如下命令重新编译：
+有2种途径得到mosn可执行文件, 通过源码编译或者使用预编译好的压缩包文件。
 
+从脚手架项目`go-plugin/etc/bundle/mosn.zip`解压缩放入到`build/sidecar/binary`中。
+
+或者在脚手架根目录编译：
 ```shell
 # 1. 进入脚手架项目根目录
 cd $GOPATH/src/github.com/mosn/extensions/go-plugin
