update plugin prepare doc

--- a/go-plugin/doc/1.plugin-prepare.md
+++ b/go-plugin/doc/1.plugin-prepare.md
@@ -219,7 +219,7 @@ make start
 
    ![远程调试](./images/remote_debug.png)
 
-   3. 配置好远程调试后，在插件代码打好断点，点击2次Debug mosn按钮即可
+3. 配置好远程调试后，在插件代码打好断点，点击2次Debug mosn按钮即可
 
 ![调试mosn](./images/debug-mosn.png)
 
@@ -269,7 +269,9 @@ make pkg-trans plugin=bolt2sp
 0 directories, 1 file
 ```
 
-目前开源项目[sofastack-mesh-demo](https://github.com/sofastack-guides/sofastack-mesh-demo.git ) 集成了bolt、dubbo和springcloud技术栈客户端和服务端示例，可以配合mosn进行服务调用。[sofastack-mesh-demo](https://github.com/sofastack-guides/sofastack-mesh-demo.git ) 演示程序jvm参数(需要具备内网访问权限):
+目前开源项目[sofastack-mesh-demo](https://github.com/sofastack-guides/sofastack-mesh-demo.git ) 集成了bolt、dubbo和springcloud技术栈客户端和服务端示例，可以配合mosn进行服务调用。
+
+[sofastack-mesh-demo](https://github.com/sofastack-guides/sofastack-mesh-demo.git ) 演示程序jvm参数(需要具备内网访问权限):
 
 ```
 -DMOSN_ENABLE=true
