--- a/go-plugin/doc/2.1bolt.md
+++ b/go-plugin/doc/2.1bolt.md
@@ -12,7 +12,7 @@
 
 在这个小节主要介绍如何使用插件扩展bolt协议实现，并且用mosn代理协议通讯。在开始编写前，我们先展示编写完成后的目录结构：
 
-```go
+```bash
 // go-plugin插件仓库根目录
 ├── configs
 │   └── codecs												// 目录下存储具体协议相关配置, eg: bolt
@@ -85,7 +85,7 @@ type Decoder interface {
 
 所谓编解码对象，其实就是承载协议的请求/响应的结构体描述，比如bolt的协议格式定义：
 
-```go
+```bash
 /**
  * bolt请求报文 for v1
  * 0     1     2           4           6           8          10           12          14         16
