--- a/go-plugin/doc/2.1bolt.md
+++ b/go-plugin/doc/2.1bolt.md
@@ -15,26 +15,26 @@
 ```bash
 // go-plugin插件仓库根目录
 ├── configs
-│   └── codecs							// 目录下存储具体协议相关配置, eg: bolt
+│   └── codecs					// 目录下存储具体协议相关配置, eg: bolt
 │       └── bolt
 │           ├── egress_bolt.json		// 客户端sidecar发送流量配置
 │           ├── ingress_bolt.json		// 服务端sidecar接收流量配置
 │           ├── metadata.json			// 协议插件元数据配置，比如协议字段映射、依赖版本信息
 ├── pkg
-│   └── protocol						// 目录下存储具体协议编码实现，eg: bolt
+│   └── protocol				// 目录下存储具体协议编码实现，eg: bolt
 │       └── bolt
 │           ├── api.go
-│           ├── command.go				// 协议请求/响应对应的model
-│           ├── decoder.go				// 解码实现
-│           ├── encoder.go				// 编码实现
-│           ├── mapping.go				// 状态码映射
-│           ├── matcher.go				// 协议报文识别，eg: check是否是bolt报文
-│           ├── protocol.go				// 协议api实现，eg: 是否支持心跳等
+│           ├── command.go			// 协议请求/响应对应的model
+│           ├── decoder.go			// 解码实现
+│           ├── encoder.go			// 编码实现
+│           ├── mapping.go			// 状态码映射
+│           ├── matcher.go			// 协议报文识别，eg: check是否是bolt报文
+│           ├── protocol.go			// 协议api实现，eg: 是否支持心跳等
 │           └── types.go
 └── plugins
-    └── codecs							// 目录下存储激活插件入口代码，eg: bolt
+    └── codecs					// 目录下存储激活插件入口代码，eg: bolt
           └── bolt
-              └── main					//  go插件规范，需要package为main
+              └── main				//  go插件规范，需要package为main
                   └── codec.go
 ```
 
@@ -172,7 +172,7 @@ type Heartbeater interface {
 }
 ```
 
-因为bolt协议需要支持心跳，保持tcp长连接活跃，请参考标准bolt的[心跳请求](https://github.com/mosn/extensions/blob/bdd06f879a77c7f795df05bf904e4854c1e6034f/go-plugin/pkg/protocol/bolt/protocol.go#L107)和[心跳响应](https://github.com/mosn/extensions/blob/bdd06f879a77c7f795df05bf904e4854c1e6034f/go-plugin/pkg/protocol/bolt/protocol.go#L121)示例。
+因为bolt协议需要支持心跳，保持tcp长连接活跃，请参考标准bolt的[心跳请求](https://github.com/mosn/extensions/blob/bdd06f879a77c7f795df05bf904e4854c1e6034f/go-plugin/pkg/protocol/bolt/protocol.go#L107) 和[心跳响应](https://github.com/mosn/extensions/blob/bdd06f879a77c7f795df05bf904e4854c1e6034f/go-plugin/pkg/protocol/bolt/protocol.go#L121) 示例。
 
 ### 2.1.4 请求劫持
 
@@ -193,14 +193,14 @@ type Hijacker interface {
 }
 ```
 
-开发者应该在`Hijack` 根据请求构造异常响应报文。请参考标准bolt的[响应劫持构造](https://github.com/mosn/extensions/blob/bdd06f879a77c7f795df05bf904e4854c1e6034f/go-plugin/pkg/protocol/bolt/protocol.go#L136)和[状态码转换](https://github.com/mosn/extensions/blob/bdd06f879a77c7f795df05bf904e4854c1e6034f/go-plugin/pkg/protocol/bolt/protocol.go#L150)示例。
+开发者应该在`Hijack` 根据请求构造异常响应报文。请参考标准bolt的[响应劫持构造](https://github.com/mosn/extensions/blob/bdd06f879a77c7f795df05bf904e4854c1e6034f/go-plugin/pkg/protocol/bolt/protocol.go#L136) 和[状态码转换](https://github.com/mosn/extensions/blob/bdd06f879a77c7f795df05bf904e4854c1e6034f/go-plugin/pkg/protocol/bolt/protocol.go#L150) 示例。
 
 ### 2.1.5 协议Codec
 
 如果需要激活协议插件，协议扩展开发者需要实现`api.XProtocolCodec` ，它起到关键的桥接作用。
 
 - 负责创建`api.XProtocol` 实例，从而具备协议编解码、心跳处理和请求劫持等能力
-- 协议报文识别(mather, 在透明劫持等场景识别流量)，协议状态码转换成标准http状态码能力
+- 协议报文识别(matcher, 在透明劫持等场景识别流量)，协议状态码转换成标准http状态码能力
 - 提供go-plugin so加载入口函数
 
 ```go
@@ -234,7 +234,7 @@ type HTTPMapping interface {
 
 `HTTPMapping` 将私有协议状态码映射成标准的http状态码，用于统计请求状态、控制面状态码识别和trace日志等信息，开发者应该判断`headers`是一个`api.XRespFrame` 类型，并且提取状态码转换成http状态码 ，这里转换并不会改变响应报文的状态码。
 
-关于协议识别和状态码映射实现，请参考标准bolt的[报文识别matcher](https://github.com/mosn/extensions/blob/master/go-plugin/pkg/protocol/bolt/matcher.go)和[状态码转换](https://github.com/mosn/extensions/blob/master/go-plugin/pkg/protocol/bolt/mapping.go)示例。
+关于协议识别和状态码映射实现，请参考标准bolt的[报文识别matcher](https://github.com/mosn/extensions/blob/master/go-plugin/pkg/protocol/bolt/matcher.go) 和[状态码转换](https://github.com/mosn/extensions/blob/master/go-plugin/pkg/protocol/bolt/mapping.go) 示例。
 
 go plugin官方实践，要求插件入口代码需要放在main包中，因此推荐插件的标准路径:
 
@@ -257,9 +257,9 @@ func LoadCodec() api.XProtocolCodec {
 }
 ```
 
-标准bolt协议的codec.go实现提供了示例，请参考开源实现[codec.go](https://github.com/mosn/extensions/blob/master/go-plugin/plugins/codecs/bolt/main/codec.go)。
+标准bolt协议的codec.go实现提供了示例，请参考开源实现[codec.go](https://github.com/mosn/extensions/blob/master/go-plugin/plugins/codecs/bolt/main/codec.go) 。
 
-插件代码完成后，需要提供插件的配置信息，在[2.1 动手实现bolt协议插件化](#2.1 动手实现bolt协议插件化)小节展示`configs/codecs`存放的是具体协议配置，主要包括3个配置文件：
+插件代码完成后，需要提供插件的配置信息，在[2.1 动手实现bolt协议插件化](https://github.com/mosn/extensions/blob/master/go-plugin/doc/2.1bolt.md#21-%E5%8A%A8%E6%89%8B%E5%AE%9E%E7%8E%B0bolt%E5%8D%8F%E8%AE%AE%E6%8F%92%E4%BB%B6%E5%8C%96) 小节展示`configs/codecs`存放的是具体协议配置，主要包括3个配置文件：
 
 - [egress_bolt.json](https://github.com/mosn/extensions/blob/master/go-plugin/configs/codecs/bolt/egress_bolt.json) 客户端sidecar发送流量配置，指定sidecar调用方端口、路由配置，标识egress
 - [ingress_bolt.json](https://github.com/mosn/extensions/blob/master/go-plugin/configs/codecs/bolt/ingress_bolt.json) 服务端sidecar接收流量配置, 指定sidecar服务方端口、路由配置，标识ingress
@@ -270,13 +270,13 @@ func LoadCodec() api.XProtocolCodec {
 - x-mosn-data-id是必选的，告知mosn怎么解析服务唯一标识，对应于bolt服务注册和订阅的dataId，其中占位符${service}会在mosn运行时从请求头中获取并替换。
 - mosn_api和mosn_pkg必须和运行时mosn二进制依赖一致，否则插件无法装载成功。
 
-至此，bolt协议扩展开发完成，可以通过[1.2.2 编译插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6)小节指南，正确编译插件以及[1.2.1 编译mosn](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#121-%E7%BC%96%E8%AF%91mosn)、[1.2.3 编译调试](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#123-%E7%BC%96%E8%AF%91%E8%B0%83%E8%AF%95)小节启动mosn加载插件。 
+至此，bolt协议扩展开发完成，可以通过[1.2.2 编译插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6) 小节指南，正确编译插件以及[1.2.1 编译mosn](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#121-%E7%BC%96%E8%AF%91mosn) 、[1.2.3 编译调试](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#123-%E7%BC%96%E8%AF%91%E8%B0%83%E8%AF%95) 小节启动mosn加载插件。 
 
 ### 2.1.6 启动bolt应用服务
 
 因为sofa bolt是标准微服务框架，服务方和消费方会主动进行服务发布和订阅，实现服务通信需要依次启动mosn、应用服务方和消费方。准备详细步骤如下：
 
-- 确保正确[编译bolt插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6)以及[1.2.1 编译mosn](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#121-%E7%BC%96%E8%AF%91mosn)、[1.2.3 编译调试](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#123-%E7%BC%96%E8%AF%91%E8%B0%83%E8%AF%95)小节启动mosn加载插件
+- 确保正确[编译bolt插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6) 以及[1.2.1 编译mosn](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#121-%E7%BC%96%E8%AF%91mosn) 、[1.2.3 编译调试](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#123-%E7%BC%96%E8%AF%91%E8%B0%83%E8%AF%95) 小节启动mosn加载插件
 - 编译sofa rpc的server和client演示程序并启动
 
 接下来重点介绍如何获取和编译bolt server和client的演示程序：
@@ -296,7 +296,7 @@ mvn clean package
 # sofa-echo-client-web-1.0-SNAPSHOT-executable.jar
 ```
 
-在mosn容器启动情况下，并且ide发起了[远程调试](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#123-%E7%BC%96%E8%AF%91%E8%B0%83%E8%AF%95)，分别启动server和client即可：
+在mosn容器启动情况下，并且ide发起了[远程调试](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#123-%E7%BC%96%E8%AF%91%E8%B0%83%E8%AF%95) ，分别启动server和client即可：
 
 ```java
 # 1. 在sofa-samples-springboot2目录启动server
