--- a/go-plugin/doc/2.2dubbo.md
+++ b/go-plugin/doc/2.2dubbo.md
@@ -42,7 +42,7 @@ dubbo是标准dubbo框架的内置协议，网络报文头部包含整数类型I
 - pkg 包含插件满足mosn api接口的代码实现，**协议插件代码**应该放到protocol目录中
 - plugins 包含插件激活代码，协议**插件激活代码**都应该存储在codecs目录中
 
-### 2.1.1 编解码实现
+### 2.2.1 编解码实现
 
 在处理请求和响应流程中，开发者需要实现`XProtocol`接口, 在该接口中包含`Protocol` 接口，它负责真正的编解码实现：
 
@@ -79,7 +79,7 @@ type Decoder interface {
 
 目前提供了示例编解码实现，请参考[dubbo编码](https://github.com/mosn/extensions/blob/24a1726f6f2687f864146abedf72efdc12c420c0/go-plugin/pkg/protocol/dubbo/protocol.go#L65) 和[dubbo解码](https://github.com/mosn/extensions/blob/24a1726f6f2687f864146abedf72efdc12c420c0/go-plugin/pkg/protocol/dubbo/protocol.go#L76) 示例。
 
-### 2.1.2 编解码对象
+### 2.2.2 编解码对象
 
 所谓编解码对象，其实就是承载协议的请求/响应的结构体描述，比如dubbo的协议格式定义：
 
@@ -144,9 +144,9 @@ type XRespFrame interface {
 
 目前提供了dubbo示例编解码对象结构体实现, dubbo用一个struct同时表示请求和响应，请参考[command](https://github.com/mosn/extensions/blob/master/go-plugin/pkg/protocol/dubbo/command.go).
 
-### 2.1.3 心跳处理
+### 2.2.3 心跳处理
 
-mosn支持了协议层级的心跳处理，在`2.1.1` 小节中开发者实现的`XProtocol`接口,它包含`Heartbeater` 接口，它负责心跳处理的约定，当然如果协议本身不需要支持心跳逻辑，`Heartbeater#Trigger`实现返回nil即可，并且跳过本小节阅读。
+mosn支持了协议层级的心跳处理，在`2.2.1` 小节中开发者实现的`XProtocol`接口,它包含`Heartbeater` 接口，它负责心跳处理的约定，当然如果协议本身不需要支持心跳逻辑，`Heartbeater#Trigger`实现返回nil即可，并且跳过本小节阅读。
 
 心跳处理逻辑：
 
@@ -165,11 +165,11 @@ type Heartbeater interface {
 
 因为dubbo协议需要支持心跳，保持tcp长连接活跃, 但是当前未实现请求，仅实现了心跳响应，请参考标准dubbo的[心跳请求](https://github.com/mosn/extensions/blob/master/go-plugin/pkg/protocol/dubbo/protocol.go#L93) 和[心跳响应](https://github.com/mosn/extensions/blob/24a1726f6f2687f864146abedf72efdc12c420c0/go-plugin/pkg/protocol/dubbo/protocol.go#L98) 示例。
 
-### 2.1.4 请求劫持
+### 2.2.4 请求劫持
 
 在service mesh场景中，mesh在转发过程中可能失败，也可能被控制面拦截，比如限流熔断，需要协议层构造并返回响应。
 
-在`2.1.1` 小节中开发者实现的`XProtocol`接口,它包含`Hijacker` 接口：
+在`2.2.1` 小节中开发者实现的`XProtocol`接口,它包含`Hijacker` 接口：
 
 - Hijack 根据请求、异常状态码构造异常响应
 - Mapping 将标准mosn http状态码转换成扩展协议可以理解的响应状态码
@@ -186,7 +186,7 @@ type Hijacker interface {
 
 开发者应该在`Hijack` 根据请求构造异常响应报文。请参考标准dubbo的[响应劫持构造](https://github.com/mosn/extensions/blob/24a1726f6f2687f864146abedf72efdc12c420c0/go-plugin/pkg/protocol/dubbo/protocol.go#L114) 和[状态码转换](https://github.com/mosn/extensions/blob/24a1726f6f2687f864146abedf72efdc12c420c0/go-plugin/pkg/protocol/dubbo/protocol.go#L138) 示例，dubbo协议在Hijack中实现的状态码映射(http状态码转dubbo协议状态码)，因此Mapping直接返回http的状态码。
 
-### 2.1.5 协议Codec
+### 2.2.5 协议Codec
 
 如果需要激活协议插件，协议扩展开发者需要实现`api.XProtocolCodec` ，它起到关键的桥接作用。
 
@@ -209,7 +209,7 @@ type XProtocolCodec interface {
 }
 ```
 
-其中`NewXProtocol` 就是对应`2.1.1`~`2.1.4`小节的协议实现，在此不再重复赘述。接下来主要介绍协议mather和状态码映射：
+其中`NewXProtocol` 就是对应`2.2.1`~`2.2.4`小节的协议实现，在此不再重复赘述。接下来主要介绍协议mather和状态码映射：
 
 ```go
 // ProtocolMatch recognize if the given data matches the protocol specification or not
@@ -250,7 +250,7 @@ func LoadCodec() api.XProtocolCodec {
 
 标准dubbo协议的codec.go实现提供了示例，请参考开源实现[codec.go](https://github.com/mosn/extensions/tree/master/go-plugin/plugins/codecs/dubbo/main) 。
 
-插件代码完成后，需要提供插件的配置信息，在[2.2 动手实现标准dubbo协议扩展] 小节展示`configs/codecs`存放的是具体协议配置，主要包括3个配置文件：
+插件代码完成后，需要提供插件的配置信息，在[2.2 动手实现标准dubbo协议扩展](https://github.com/mosn/extensions/blob/master/go-plugin/doc/2.2dubbo.md#22-%E5%8A%A8%E6%89%8B%E5%AE%9E%E7%8E%B0%E6%A0%87%E5%87%86dubbo%E5%8D%8F%E8%AE%AE%E6%89%A9%E5%B1%95) 小节展示`configs/codecs`存放的是具体协议配置，主要包括3个配置文件：
 
 - [egress_dubbo.json](https://github.com/mosn/extensions/blob/master/go-plugin/configs/codecs/dubbo/egress_dubbo.json) 客户端sidecar发送流量配置，指定sidecar调用方端口、路由配置，标识egress
 - [ingress_dubbo.json](https://github.com/mosn/extensions/blob/master/go-plugin/configs/codecs/dubbo/ingress_dubbo.json) 服务端sidecar接收流量配置, 指定sidecar服务方端口、路由配置，标识ingress
@@ -263,7 +263,7 @@ func LoadCodec() api.XProtocolCodec {
 
 至此，dubbo协议扩展开发完成，可以通过[make codec plugin=dubbo](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6) 小节指南，正确编译插件以及[1.2.1 编译mosn](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#121-%E7%BC%96%E8%AF%91mosn) 、[1.2.3 编译调试](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#123-%E7%BC%96%E8%AF%91%E8%B0%83%E8%AF%95) 小节启动mosn加载插件。 
 
-### 2.1.6 启动dubbo应用服务
+### 2.2.6 启动dubbo应用服务
 
 因为dubbo是标准微服务框架，服务方和消费方会主动进行服务发布和订阅，实现服务通信需要依次启动mosn、应用服务方和消费方。准备详细步骤如下：
 
