add springcloud doc.

--- a/go-plugin/doc/2.2dubbo.md
+++ b/go-plugin/doc/2.2dubbo.md
@@ -294,10 +294,10 @@ mvn clean package
 java -DMOSN_ENABLE=true -DSOFA_INSTANCE_ID=000001 -DSOFA_ANTVIP_ENDPOINT=11.239.139.142 -Dspring.profiles.active=dev -jar dubbo-echo-server/target/dubbo-echo-server-1.0-SNAPSHOT.jar
 
 # 2. 在dubbo-samples-springboot2目录启动client
-java -DMOSN_ENABLE=true -Drpc_tr_port=12198 -DSOFA_INSTANCE_ID=000001 -DSOFA_ANTVIP_ENDPOINT=11.239.139.142 -Dspring.profiles.active=dev -jar dubbo-echo-client/target/dubbo-echo-client-1.0-SNAPSHOT.jar
+java -DMOSN_ENABLE=true -DSOFA_INSTANCE_ID=000001 -DSOFA_ANTVIP_ENDPOINT=11.239.139.142 -Dspring.profiles.active=dev -jar dubbo-echo-client/target/dubbo-echo-client-1.0-SNAPSHOT.jar
 ```
 
-一切就绪后，server会往mosn发布服务，client会往mosn订阅服务，可以查看经过mesh的dubbo调用流量：
+一切就绪后，server会往mosn发布服务，client会往mosn订阅服务，可以查看经过mesh的springcloud调用流量：
 
 ```bash
 # 1. 在dubbo-samples-springboot2目录启动的client终端打印
