--- a/go-plugin/doc/2.1bolt.md
+++ b/go-plugin/doc/2.1bolt.md
@@ -2,7 +2,7 @@
 
 | 版本号 | 作者 | 备注     | 修订日期  |
 | ------ | ---- | -------- | --------- |
-| 0.1    | 诣极 | 初始版本 | 2022.1.14 |
+| 0.1    | [诣极](https://github.com/zonghaishang) | 初始版本 | 2022.1.14 |
 
 # 2. Mesh功能扩展篇
 
