feat: modify codec

--- a/go-plugin/doc/2.6.2bolt2springcloud.md
+++ b/go-plugin/doc/2.6.2bolt2springcloud.md
@@ -18,7 +18,7 @@
 springcloud 是基于 http 协议扩展的，需要解决 http header中 host、path、method 和 bolt 数据对应关系，bolt 协议寻址则通过 service 和 method 负责。从数据流向来看，可以通过 bolt header 获取 service 和 method 信息，根据静态配置或者动态配置查到对应的 http 的映射关系，用于构建 http 的 header 信息。
 当前 mosn 框架处理 http 请求默认处理为 host 为空、path 为 / 、method 为 POST。
 
-![结构处理](./images/)
+![结构处理](./images/bolt-header-transfer.png)
 
 #### TranscodingResponse
 ##### bolt 转 springcloud header 结构处理
@@ -182,6 +182,7 @@ make ant
 > ![ 成功标志 ](./images/bolt2springcloud.jpg)
  
 ## 请求处理流程
-![请求处理流程](./images/)
+![请求处理流程](./images/bolt-request-transfer.jpg)
 
-
+## 响应处理流程
+![响应处理流程](./images/bolt-append.jpg)
