--- a/go-plugin/doc/2.1bolt.md
+++ b/go-plugin/doc/2.1bolt.md
@@ -38,7 +38,7 @@
                   └── codec.go
 ```
 
-bolt是标准sofa rpc框架的内置协议，网络报文头部包含整数类型Id关联请求和响应，已经满足标准mosn接口[规范](https://github.com/mosn/api/blob/master/xprotocol.go#L106)，主要关注3块：
+bolt是标准sofa rpc框架的内置协议，网络报文头部包含整数类型Id关联请求和响应，已经满足标准mosn接口[规范](https://github.com/mosn/api/blob/master/xprotocol.go#L106) ，主要关注3块：
 
 - configs 包括插件配置信息，**协议插件配置**都应该存储在codecs目录中
 - pkg 包含插件满足mosn api接口的代码实现，**协议插件代码**应该放到protocol目录中
@@ -77,7 +77,7 @@ type Decoder interface {
 
 注意：在Decode流程中，完成解码**必须调用**`data.Drain(frameLen)`, `frameLen`代表完整请求或者报文总长度。
 
-开发者在编写编解码时，建议采用协议名+Protocol命名，比如bolt编解码，命名为[BoltProtocol](https://github.com/mosn/extensions/blob/master/go-plugin/pkg/protocol/bolt/protocol.go)。
+开发者在编写编解码时，建议采用协议名+Protocol命名，比如bolt编解码，命名为[BoltProtocol](https://github.com/mosn/extensions/blob/master/go-plugin/pkg/protocol/bolt/protocol.go) 。
 
 目前提供了示例编解码实现，请参考[bolt编码](https://github.com/mosn/extensions/blob/6c12d9439396fe8071e38003a65b47566186165d/go-plugin/pkg/protocol/bolt/protocol.go#L74) 和[bolt解码](https://github.com/mosn/extensions/blob/6c12d9439396fe8071e38003a65b47566186165d/go-plugin/pkg/protocol/bolt/protocol.go#L86) 示例。
 
@@ -218,7 +218,7 @@ type XProtocolCodec interface {
 }
 ```
 
-其中`NewXProtocol` 就是对应`2.1.1`~`2.1.4`小节的协议实现，在此不再重复赘述。接下来主要介绍协议mather和状态码映射：
+其中`NewXProtocol` 就是对应`2.1.1`~`2.1.4`小节的协议实现，在此不再重复赘述。接下来主要介绍协议matcher和状态码映射：
 
 ```go
 // ProtocolMatch recognize if the given data matches the protocol specification or not
