update directory & upload mosn.zip

--- a/go-plugin/doc/3.1pub-pod.md
+++ b/go-plugin/doc/3.1pub-pod.md
@@ -14,7 +14,7 @@
 
 在没有paas环境可以通过yaml方式手动apply测试应用，并且通过管控台开通mesh，可以自动注入sidecar。
 
-### 3.1.1 容器中发布应用
+### 3.1.1 手动发布容器应用
 
 目前提供一份应用yaml模板，可以参照这份模板修改成目标测试应用，需要修改的点：
 
@@ -114,6 +114,22 @@ docker load -i dubbo-echo-client:v1.0.zip
 # 4. 执行查看镜像命令
 docker images
 ```
+
+将上述修改后的yaml保存，假设叫做`dubbo-echo-client.yaml`, 可以执行以下命令进行部署和验证sidecar注入：
+
+```bash
+# 1. 创建pod
+kubectl apply -f dubbo-echo-client.yaml
+
+# 2. 查看运行的pod状态
+kubectl get pods
+
+# 3. --kubeconfig配置(如果k8s集群需要访问权限), 假设kubeconfig授权保存在config文件中
+kubectl --kubeconfig=config apply -f dubbo-echo-client.yaml
+kubectl --kubeconfig=config get pods
+```
+
+
 
 说明：
 
