修改协议转换文档

--- a/go-plugin/doc/2.6.1dubbo2springcloud.md
+++ b/go-plugin/doc/2.6.1dubbo2springcloud.md
@@ -1,5 +1,11 @@
+文档修订历史
+
+| 版本号 | 作者 | 备注     | 修订日期  |
+| ------ | ---- | -------- | --------- |
+| 0.1    | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.2.10 |
+
 <a name="B0LtO"></a>
-### 2.6.2 标准dubbo和spring cloud协议互转实践
+### 2.6.1 标准dubbo和spring cloud协议互转实践
 本小节主要介绍dubbo转spring cloud协议的实现过程，包括协议转换插件的开发、编译和本地跑通验证。
 <a name="wFy3B"></a>
 #### 转换流程
