--- a/go-plugin/doc/2.6transcoder.md
+++ b/go-plugin/doc/2.6transcoder.md
@@ -1,10 +1,12 @@
-| **版本号** | **作者** | **备注** | **修订日期** |
-| --- | --- | --- | --- |
-| 0.1 | 檀少 | 初始版本 | 2022.2.10 |
+文档修订历史
+
+| 版本号 | 作者 | 备注     | 修订日期  |
+| ------ | ---- | -------- | --------- |
+| 0.1    | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.2.10 |
 
 <a name="LjFmL"></a>
 ## 2.6 协议转换插件
-“协议转换”是将一种协议报文转成另一种协议报文。适用于异构系统之间的互相调用，比如springcloud的服务直接调用dubbo服务，需要实现基于http协议的springcloud报文转换成dubbo协议的报文。“协议转换插件”是实现协议转换的套件。本小节主要介绍如何开发一个协议转换插件，实现细节可以参考2.6.2、2.6.3、2.6.4的协议转换实践。
+“协议转换”是将一种协议报文转成另一种协议报文。适用于异构系统之间的互相调用，比如springcloud的服务直接调用dubbo服务，需要实现基于http协议的springcloud报文转换成dubbo协议的报文。“协议转换插件”是实现协议转换的套件。本小节主要介绍如何开发一个协议转换插件，实现细节可以参考2.6.1、2.6.2、2.6.3的协议转换实践。
 <a name="oQOJX"></a>
 #### 第一步：编写插件配置
 ```go
@@ -99,7 +101,7 @@ func LoadTranscoderFactory(cfg map[string]interface{}) transcoder.Transcoder {
 	return &xr2sp{cfg: cfg}
 }
 ```
-LoadTranscoderFactory方法，接收一个map类型，这个是协议转换插件需要的配置，比如报文映射文件，该配置在egress_config.json(或ingress_config.json)的rule_info. config中提供。实现细节可以参考2.6.2、2.6.3、2.6.4
+LoadTranscoderFactory方法，接收一个map类型，这个是协议转换插件需要的配置，比如报文映射文件，该配置在egress_config.json(或ingress_config.json)的rule_info. config中提供。实现细节可以参考2.6.1、2.6.2、2.6.3
 <a name="vGp9B"></a>
 #### 第三步：编译插件
 通过插件脚手架工程，编译插件，参考[1.2.2编译插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6)。<br />
