--- a/go-plugin/doc/2.6.1dubbo2springcloud.md
+++ b/go-plugin/doc/2.6.1dubbo2springcloud.md
@@ -9,7 +9,7 @@
 本小节主要介绍dubbo转spring cloud协议的实现过程，包括协议转换插件的开发、编译和本地跑通验证。
 <a name="wFy3B"></a>
 #### 转换流程
-
+![image.png](./images/dubbo_springcloud_transcoder.jpg)
 - 转换配置：保存在egress_config.json（或ingress_config.json）的rule_info.config中。由于dubbo报文无法直接转换成http报文，比如，http的path，method等信息就无法从dubbo报文中得到，或者dubbo的参数应该转成http body参数还是query参数也无法知晓。而这些信息可以从转换配置中得到。本实践demo的转换配置如下：
 ```json
 {//协议转换插件配置
@@ -30,7 +30,7 @@
   }
 }
 ```
-转换配置使用说明：<br />1、解析dubbo协议，通过interface.method为com.alipay.sofa.ms.service.EchoService.add匹配到转换配置。<br />2、构造http请求，请求path为/reservations/add，method为POST，dubbo的第一个java.lang.Integer类型参数值为http的query参数a,dubbo的第二个java.lang.Integer类型参数值为http的query参数b<br />​<br />
+转换配置使用说明：<br />1、解析dubbo协议，匹配`<dubbo.interface>.<dubbo.method>`为com.alipay.sofa.ms.service.EchoService.add的转换配置。<br />2、根据转换配置构造http请求，请求path为/reservations/add，method为POST，dubbo的第一个java.lang.Integer类型参数值为http的query参数a,dubbo的第二个java.lang.Integer类型参数值为http的query参数b<br />​<br />
 <a name="AZmez"></a>
 #### 设计实现
 我们先展示编写完成后的目录结构
