--- a/go-plugin/doc/2.6transcoder.md
+++ b/go-plugin/doc/2.6transcoder.md
@@ -27,9 +27,9 @@
 - configs包括插件配置信息，**协议转换插件配置**都应该存储在transcoders目录中
 - plugins包含插件激活代码，**协议转换插件激活代码**都应该存储在transcoders目录中
 
-**说明：**<pluginName>目录名是协议转换插件名称，egress_config.json和ingress_config.json 并不强制同时存在，根据实际场景决定提供egress_config.json或者ingress_config.json即可，分别代表在客户端sdiecar和服务端sidecar执行协议转换逻辑。
+**说明**：`<pluginName>`目录名是协议转换插件名称，egress_config.json和ingress_config.json 并不强制同时存在，根据实际场景决定提供egress_config.json或者ingress_config.json即可，分别代表在客户端sdiecar和服务端sidecar执行协议转换逻辑。
 
-- go-plugin/plugins/transcoders: 这个路径存放具体协议转换插件目录，并且在目录中创建main目录存放<code>.go文件，文件名不限制
+- go-plugin/plugins/transcoders: 这个路径存放具体协议转换插件目录，并且在目录中创建main目录存放`<code>.go`文件，文件名不限制
 - metadata.json 包括插件自身元数据配置，包括依赖mosn api/pkg版本以及插件类型为transcoders
 - egress_config.json 客户端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher配置、协议转换规则
 - ingress_config.json 服务端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher配置、协议转换规则
@@ -44,7 +44,7 @@
 	}]
 }
 ```
-**说明：**dependencies是插件依赖的外部库的版本，需保持和mosn依赖的相同外部库版本一致。如，mosn_api，mosn_pkg，该版本在mosn的go.mod中可以找到。
+**说明**：dependencies是插件依赖的外部库的版本，需保持和mosn依赖的相同库的版本一致。如，mosn_api，mosn_pkg，该版本在mosn的go.mod中可以找到。
 ```json
 //egress_config.json或ingress_config.json 
 {
@@ -78,7 +78,10 @@
     }
 }
 ```
-**配置使用说明：**<br />1、mosn根据go_plugin_config获取so文件，并通过go plugin机制加载so文件，此时原协议<src_protocol>，目标协议<dst_protocol>的协议转换插件加载成功<br />2、请求流量过mosn，mosn根据matcher_config，选择匹配器<matcher_type>。匹配器从mosn请求信息的variables中获取<name>，并匹配<value>，如果匹配成功则根据当前请求协议和rule_info的目标协议upstream_protocol，选择对应的协议转换插件处理请求流量，并保存协议转换插件到上下文。<br />3、响应流量过mosn，从上下文中取协议转换插件，处理响应流量。
+**配置使用说明**：<br />
+1、mosn根据go_plugin_config获取so文件，并通过go plugin机制加载so文件，此时原协议`<src_protocol>`，目标协议`<dst_protocol>`的协议转换插件加载成功<br />
+2、请求流量过mosn，mosn根据matcher_config，选择匹配器`<matcher_type>`。匹配器从mosn请求信息的variables中获取`<name>`，并匹配`<value>`，如果匹配成功则根据当前请求协议和rule_info的目标协议upstream_protocol，选择对应的协议转换插件处理请求流量，并保存协议转换插件到上下文。<br />
+3、响应流量过mosn，从上下文中取协议转换插件，处理响应流量。
 <a name="jiTH5"></a>
 #### 第二步：编写插件代码
 
@@ -93,7 +96,7 @@ type Transcoder interface {
 	TranscodingResponse(ctx context.Context, headers api.HeaderMap, buf api.IoBuffer, trailers api.HeaderMap) (api.HeaderMap, api.IoBuffer, api.HeaderMap, error)
 }
 ```
-Transcoder的接口实现如上，包含三方面内容<br />一、实现Accept方法，要求返回一个bool类型，表示是否进行协议转换，‘false’表示不进行协议转换。<br />二、实现TranscodingRequest方法，对请求报文的headers、buf、trailers做转换，返回新协议报文的headers、buf、trailers。<br />三、实现TranscodingResponse方法，对响应报文的headers、buf、trailers做转换，返回新协议报文的headers、buf、trailers。
+Transcoder的接口实现如上，包含三方面内容：<br />一、实现Accept方法，要求返回一个bool类型，表示是否进行协议转换，false表示不进行协议转换。<br />二、实现TranscodingRequest方法，对请求报文的headers、buf、trailers做转换，返回新协议报文的headers、buf、trailers。<br />三、实现TranscodingResponse方法，对响应报文的headers、buf、trailers做转换，返回新协议报文的headers、buf、trailers。
 
 - 实现LoadTranscoderFactory方法
 ```go
@@ -101,7 +104,7 @@ func LoadTranscoderFactory(cfg map[string]interface{}) transcoder.Transcoder {
 	return &xr2sp{cfg: cfg}
 }
 ```
-LoadTranscoderFactory方法，接收一个map类型，这个是协议转换插件需要的配置，比如报文映射文件，该配置在egress_config.json(或ingress_config.json)的rule_info. config中提供。实现细节可以参考2.6.1、2.6.2、2.6.3
+LoadTranscoderFactory方法，接收一个map类型，这个是协议转换插件需要的配置，比如报文映射文件，该配置在egress_config.json(或ingress_config.json)的rule_info.config中提供。实现细节可以参考2.6.1、2.6.2、2.6.3
 <a name="vGp9B"></a>
 #### 第三步：编译插件
 通过插件脚手架工程，编译插件，参考[1.2.2编译插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6)。<br />
