upgrade module name to mosn.io

--- a/go-plugin/doc/2.6.2bolt2springcloud.md
+++ b/go-plugin/doc/2.6.2bolt2springcloud.md
@@ -10,7 +10,7 @@
 ### 设计实现
 本次协议转换难点在于如何将 bolt 协议包转换为 springcloud 的协议包。其中协议包分成转换三部分：headers：数据控制针，buf：数据具体信息，trailers：数据控制针。由于 bolt 没有 trailers 且 buf 采用 json 方式数据编码，而 springcloud 同样buf采用json编码格式传输。因此本次只涉及到 header 数据转换。
 #### Accept
-本次协议转换插件只处理 `github.com/mosn/extensions/go-plugin/pkg/protocol/bolt` 包生产的数据，因此实现如下：
+本次协议转换插件只处理 `mosn.io/extensions/go-plugin/pkg/protocol/bolt` 包生产的数据，因此实现如下：
 [Accept](https://github.com/mosn/extensions/blob/d989cd524d04465bec5069de35b019ba31819ef6/go-plugin/plugins/transcoders/bolt2springcloud/main/bolt2sp.go#L52)
 #### TranscodingRequest
 ##### bolt 转 springcloud header 结构处理
