--- a/go-plugin/doc/1.plugin-prepare.md
+++ b/go-plugin/doc/1.plugin-prepare.md
@@ -38,8 +38,8 @@ mkdir -p $GOPATH/src/gitlab.alipay-inc.com/ant-mesh/
 cd $GOPATH/src/gitlab.alipay-inc.com/ant-mesh/
 # 3. clone 代码
 git clone https://gitlab.alipay-inc.com/ant-mesh/mosn.git
-# 4. 切换到目标分支mecha_dev_master_cloud
-git checkout mecha_dev_master_cloud
+# 4. 切换到目标release tag: v1.26.0-plugin
+git checkout -b v1.26.0-plugin v1.26.0-plugin
 ```
 
 获取到商业版mosn源码，可以方便本地源码调试。本地开发可以使用脚手架内的可执行mosn二进制文件，也可以手动编译mosn获取最新的可执行文件，如何编译会在接下来小节介绍。
@@ -50,9 +50,9 @@ git checkout mecha_dev_master_cloud
 
 ```bash
 # 1. 创建脚手架项目路径
-mkdir -p $GOPATH/src/github.com/mosn/
+mkdir -p $GOPATH/src/mosn.io/
 # 2. 进入脚手架项目路径
-cd $GOPATH/src/github.com/mosn/
+cd $GOPATH/src/mosn.io/
 # 3. clone 代码
 git clone https://github.com/mosn/extensions.git
 ```
@@ -63,7 +63,7 @@ git clone https://github.com/mosn/extensions.git
 
 ```bash
 # 1. 进入脚手架项目路径
-cd $GOPATH/src/github.com/mosn/
+cd $GOPATH/src/mosn.io/
 # 2. clone fork 后的新代码
 git clone https://github.com/zonghaishang/extensions.git
 ```
@@ -96,6 +96,8 @@ git clone https://github.com/zonghaishang/extensions.git
 有2种途径得到mosn可执行文件, 通过源码编译或者使用预编译好的压缩包文件。
 
 从脚手架项目`go-plugin/etc/bundle/mosn.zip`解压缩放入到`build/sidecar/binary`中。
+
+**说明**：商业版mosn.zip不允许放置开源，可以联系邀明或者诣极获取mosn.zip文件。
 
 或者在脚手架根目录编译：
 ```bash
