support for non-debug startup mode

--- a/go-plugin/doc/1.plugin-prepare.md
+++ b/go-plugin/doc/1.plugin-prepare.md
@@ -197,13 +197,13 @@ make clean
 以下命令执行都在go-plugin根项目中执行，启动mosn调试命令：
 
 ```bash
-make start
+make debug
 # 启动后，终端输出以下提示信息：
 # start mosn-container container success.
 # run 'docker exec -it mosn-container /bin/bash' command enter mosn container.
 ```
 
-注意：make start 之后，mosn会监听2345端口，并且阻塞直到有远程调试行为, 接下来会介绍。make start可以反复执行，重复执行会自动停止正在运行的mosn，nice~。
+注意：make debug 之后，mosn会监听2345端口，并且阻塞直到有远程调试行为, 接下来会介绍。make debug可以反复执行，重复执行会自动停止正在运行的mosn，nice~。
 
 在扩展新的协议时，开发者在mosn侧为协议listener分配了新的端口, 需要在脚手架启动脚本追加端口，正确让容器做映射。操作如下：
 
@@ -228,6 +228,14 @@ make start
 ![调试mosn](./images/debug-mosn.png)
 
 提示：为了提示本地排查效率，go-plugin根目录挂载了logs容器日志目录, 方便不进容器查看容器日志, nice~。
+
+**说明：** 如果无需调试mosn和插件，可以执行启动命令：
+```shell
+make start
+# 启动后，终端输出以下提示信息：
+# start mosn-container container success.
+# run 'docker exec -it mosn-container /bin/bash' command enter mosn container.
+```
 
 ### 1.2.4 插件打包
 
