--- a/go-plugin/doc/2.6.1dubbo2springcloud.md
+++ b/go-plugin/doc/2.6.1dubbo2springcloud.md
@@ -13,18 +13,18 @@
 - 转换配置：保存在egress_config.json（或ingress_config.json）的rule_info.config中。由于dubbo报文无法直接转换成http报文，比如，http的path，method等信息就无法从dubbo报文中得到，或者dubbo的参数应该转成http body参数还是query参数也无法知晓。而这些信息可以从转换配置中得到。本实践demo的转换配置如下：
 ```json
 {//协议转换插件配置
-  "com.alipay.sofa.ms.service.EchoService.add":{//dubbo到http的报文字段映射
-    "http_path":"/reservations/add",//http的path字段
-    "http_method":"POST",// http的method字段
-    "http_service":"reservation-service", //spring cloud的service信息，添加到http header中
+  "com.alipay.sofa.ms.service.EchoService.add":{    //dubbo到http的报文字段映射
+    "http_path":"/reservations/add",                //http的path字段
+    "http_method":"POST",                           // http的method字段
+    "http_service":"reservation-service",           //spring cloud的service信息，添加到http header中
     "http_query":[
       {
-        "type":"java.lang.Integer",//dubbo报文的字段类型
-        "key":"a" //http的query参数
+        "type":"java.lang.Integer",                 //dubbo报文的字段类型
+        "key":"a"                                   //http的query参数
       },
       {
-        "type":"java.lang.Integer",//dubbo报文的字段类型
-        "key":"b" //http的query参数
+        "type":"java.lang.Integer",                //dubbo报文的字段类型
+        "key":"b"                                  //http的query参数
       }
     ]
   }
@@ -37,68 +37,68 @@
 ```go
 // go-plugin插件仓库根目录
 ├── configs
-│   └── transcoders					// 目录下存储具体协议转换相关配置, eg: dubbo2springcloud
+│   └── transcoders				// 目录下存储具体协议转换相关配置, eg: dubbo2springcloud
 │       └── dubbo2springcloud
 │           ├── egress_config.json		// 客户端协议转换配置
 │           ├── ingress_config.json		// 服务端协议转换配置
 │           ├── metadata.json			// 协议转换插件元数据配置，比如依赖版本信息
 └── plugins
-    └── transcoders					// 目录下存储激活插件入口代码，eg: dubbo2springcloud
+    └── transcoders				// 目录下存储激活插件入口代码，eg: dubbo2springcloud
         └── dubbo2springcloud
             └── main				//  go插件规范，需要package为main
                 └── dubbo2springcloud.go
 ```
-dubbo转spring cloud协议转换插件dubbo2springcloud.go实现提供了示例，请参考开源实现[dubbo2springcloud.go](https://github.com/mosn/extensions/blob/master/go-plugin/plugins/transcoders/dubbo2springcloud/main/dubbo2sp.go)。<br />​
+dubbo转spring cloud协议转换插件dubbo2springcloud.go实现提供了示例，请参考开源实现[dubbo2springcloud.go](https://github.com/mosn/extensions/blob/master/go-plugin/plugins/transcoders/dubbo2springcloud/main/dubbo2sp.go) 。<br />​
 
 协议转换相关配置包含协议转换配置和协议转换插件元数据配置，存放在go-plugin/configs/transcoders目录中：
 ```go
-│── transcoders					// 目录下存储具体协议转换相关配置, eg: dubbo2springcloud
+│── transcoders				// 目录下存储具体协议转换相关配置, eg: dubbo2springcloud
 │   └── dubbo2springcloud
 │       ├── egress_config.json		// 客户端协议转换配置
 │       ├── ingress_config.json		// 服务端协议转换配置
-│       ├── metadata.json			// 协议转换插件元数据配置，比如依赖版本信息
+│       ├── metadata.json		// 协议转换插件元数据配置，比如依赖版本信息
 ```
 egress_config.json配置说明如下：
 ```json
 {
-    "type":"dubbo2springcloud", //协议转换type名称，同协议转换目录名称
-    "go_plugin_config":{ //go plugin插件信息
+    "type":"dubbo2springcloud",                        //协议转换type名称，同协议转换目录名称
+    "go_plugin_config":{                               //go plugin插件信息
         "so_path":"./transcoder-dubbo2springcloud.so", //编译后的插件so文件路径
-        "src_protocol":"dubbo", //原协议，即协议转换前的协议
-        "dst_protocol":"springcloud" //目标协议，即协议转换后的协议
+        "src_protocol":"dubbo",                        //原协议，即协议转换前的协议
+        "dst_protocol":"springcloud"                   //目标协议，即协议转换后的协议
     },
-    "matcher_config":{ //协议转换匹配规则。只有匹配改规则的流量才做dubbo到springcloud的转换
-        "matcher_type":"mulit_matcher",//匹配器类型，用来处理匹配规则
+    "matcher_config":{                                //协议转换匹配规则。只有匹配改规则的流量才做dubbo到springcloud的转换
+        "matcher_type":"mulit_matcher",               //匹配器类型，用来处理匹配规则
       	"config": {
-          "name": "dubbo2springcloud",//匹配规则名称，同协议转换type名称
+          "name": "dubbo2springcloud",                //匹配规则名称，同协议转换type名称
           "variables": [
               {
-                  "name": "service",//变量名称
+                  "name": "x-mosn-data-id",           //变量名称
                   "values": [
-                      "reservation-client"//变量值
+                      "reservation-client"            //变量值
                   ],
-                  "operator": "and",//条件
-                  "regex": false //是否是正则匹配
+                  "operator": "and",                  //条件
+                  "regex": false                      //是否是正则匹配
               }
           ]
       }
     },
-    "rule_info":{//协议转换插件配置信息
-        "upstream_protocol":"springcloud",//目标协议
-        "description":"dubbo -> spring cloud",//插件描述
-        "config":{//协议转换插件配置
-            "com.alipay.sofa.ms.service.EchoService.add":{//dubbo到http的报文字段映射
-                "http_path":"/reservations/add",//http的path字段
-                "http_method":"POST",// http的method字段
-                "http_service":"reservation-service", //spring cloud的service信息，添加到http header中
+    "rule_info":{                                           //协议转换插件配置信息
+        "upstream_protocol":"springcloud",                  //目标协议
+        "description":"dubbo -> spring cloud",              //插件描述
+        "config":{                                          //协议转换插件配置
+            "com.alipay.sofa.ms.service.EchoService.add":{  //dubbo到http的报文字段映射
+                "http_path":"/reservations/add",            //http的path字段
+                "http_method":"POST",                       // http的method字段
+                "http_service":"reservation-service",       //spring cloud的service信息，添加到http header中
                 "http_query":[
                     {
-                        "type":"java.lang.Integer",//dubbo报文的字段类型
-                        "key":"a" //http的query参数
+                        "type":"java.lang.Integer",         //dubbo报文的字段类型
+                        "key":"a"                           //http的query参数
                     },
                     {
-                        "type":"java.lang.Integer",//dubbo报文的字段类型
-                        "key":"b" //http的query参数
+                        "type":"java.lang.Integer",         //dubbo报文的字段类型
+                        "key":"b"                           //http的query参数
                     }
                 ]
             }
@@ -188,7 +188,7 @@ func LoadTranscoderFactory(cfg map[string]interface{}) transcoder.Transcoder {
 make trans plugin=dubbo2springcloud && make codec plugin=dubbo trans=dubbo2springcloud && make codec plugin=springcloud
 ```
 
-- 编译sidecat
+- 编译sidecar
 ```shell
 make ant
 ```
