--- a/go-plugin/doc/2.6.2bolt2springcloud.md
+++ b/go-plugin/doc/2.6.2bolt2springcloud.md
@@ -47,11 +47,11 @@ bolt 和 springcloud demo 准备,当前使用仓库地址为 [sofastack-mesh-dem
 egress_config.json 配置如下：
 ```json lines
 {
-  "type":"bolt2springcloud", // 插件名字
-  "go_plugin_config": { // 协议转换插件配置
+  "type":"bolt2springcloud",           // 插件名字
+  "go_plugin_config": {                // 协议转换插件配置
     "so_path":"./bolt2springcloud.so", // Transcoder 插件路径，只在本地调试才需要配置
-    "src_protocol":"bolt",    // 原协议
-    "dst_protocol":"springcloud" //目标协议
+    "src_protocol":"bolt",             // 原协议
+    "dst_protocol":"springcloud"       //目标协议
   },
   "matcher_config":{
     "matcher_type": "mulit_matcher" ,  // 默认匹配方式
@@ -69,13 +69,13 @@ egress_config.json 配置如下：
       ]
     }
   },
-  "rule_info":{ // 协议转化规则配置
+  "rule_info":{                                                     // 协议转化规则配置
     "upstream_protocol":"springcloud", 
     "description":"hello",
-    "config": { //当前插件静态配置
-        "class":"com.alipay.sofa.rpc.core.response.SofaResponse",  // respoone 转 request 的 bolt class 信息。
+    "config": {                                                     //当前插件静态配置
+        "class":"com.alipay.sofa.rpc.core.response.SofaResponse",   // response转request的 bolt class 信息。
         "service":"com.alipay.sofa.ms.service.SofaEchoService:1.0", // 路由寻址配置 
-        "com.alipay.sofa.ms.service.SofaEchoService:1.0":{ // request 转 respone 映射关系
+        "com.alipay.sofa.ms.service.SofaEchoService:1.0":{          // request转response映射关系
             "echo":{
               "x-mosn-path":"/reservations/hello",
               "x-mosn-host":"",
