--- a/go-plugin/doc/2.6transcoder.md
+++ b/go-plugin/doc/2.6transcoder.md
@@ -9,19 +9,19 @@
 “协议转换”是将一种协议报文转成另一种协议报文。适用于异构系统之间的互相调用，比如springcloud的服务直接调用dubbo服务，需要实现基于http协议的springcloud报文转换成dubbo协议的报文。“协议转换插件”是实现协议转换的套件。本小节主要介绍如何开发一个协议转换插件，实现细节可以参考2.6.1、2.6.2、2.6.3的协议转换实践。
 <a name="oQOJX"></a>
 #### 第一步：编写插件配置
-```go
+```bash
 // go-plugin插件仓库根目录
 ├── configs
-│   └── transcoders					// 目录下存储具体协议转换相关配置, eg: dubbo2springcloud
+│   └── transcoders				// 目录下存储具体协议转换相关配置, eg: dubbo2springcloud
 │       └── <pluginName>
 │           ├── egress_config.json		// 客户端协议转换配置
 │           ├── ingress_config.json		// 服务端协议转换配置
 │           ├── metadata.json			// 协议转换插件元数据配置，比如依赖版本信息
 └── plugins
-    └── transcoders					// 目录下存储激活插件代码，eg: dubbo2springcloud
+    └── transcoders				// 目录下存储激活插件代码，eg: dubbo2springcloud
         └── <pluginName>
             └── main				//  go插件规范，需要package为main
-                └── <code>.go       // 插件代码, eg: dubbo2springcloud.go
+                └── <code>.go			// 插件代码, eg: dubbo2springcloud.go
 ```
 
 - configs包括插件配置信息，**协议转换插件配置**都应该存储在transcoders目录中
@@ -34,46 +34,46 @@
 - egress_config.json 客户端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher配置、协议转换规则
 - ingress_config.json 服务端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher配置、协议转换规则
 ```json
-//metadata.json
+// metadata.json
 {
 	"name" : "<pluginName>", //插件名称
-	"kind": "transcoder", //插件类型，transcoder表示协议转换插件
+	"kind": "transcoder",    //插件类型，transcoder表示协议转换插件
 	"dependencies": [{
-		"mosn_api": "<mosn_api_version>",//mosn api的版本，该版本在mosn的go.mod中。eg: v0.0.0-20211217011300-b851d129be01
-		"mosn_pkg": "<mosn_pkg_version>"//mosn pkg的版本，该版本在mosn的go.mod中。eg:v0.0.0-20211217101631-d914102d1baf
+		"mosn_api": "<mosn_api_version>", //mosn api的版本，该版本在mosn的go.mod中。eg: v0.0.0-20211217011300-b851d129be01
+		"mosn_pkg": "<mosn_pkg_version>"  //mosn pkg的版本，该版本在mosn的go.mod中。eg:v0.0.0-20211217101631-d914102d1baf
 	}]
 }
 ```
 **说明**：dependencies是插件依赖的外部库的版本，需保持和mosn依赖的相同库的版本一致。如，mosn_api，mosn_pkg，该版本在mosn的go.mod中可以找到。
 ```json
-//egress_config.json或ingress_config.json 
+// egress_config.json或ingress_config.json 
 {
-    "type":"<pluginType>", //协议转换type名称，同插件名称，同协议转换目录名称 eg:dubbo2springcloud
-    "go_plugin_config":{ //go plugin插件信息
+    "type":"<pluginType>",                        //协议转换type名称，同插件名称，同协议转换目录名称 eg:dubbo2springcloud
+    "go_plugin_config":{                          //go plugin插件信息
         "so_path":"./transcoder-<pluginType>.so", //编译后的插件so文件路径，eg:./transcoder-dubbo2springcloud.so
-        "src_protocol":"<src_protocol>", //原协议，即协议转换前的协议 eg:dubbo
-        "dst_protocol":"<dst_protocol>" //目标协议，即协议转换后的协议 eg:springcloud
+        "src_protocol":"<src_protocol>",          //原协议，即协议转换前的协议 eg:dubbo
+        "dst_protocol":"<dst_protocol>"           //目标协议，即协议转换后的协议 eg:springcloud
     },
-    "matcher_config":{ //协议转换匹配规则。只有匹配改规则的流量才做dubbo到springcloud的转换
-        "matcher_type":"<matcher_type>",//匹配器类型，用来处理匹配规则 eg:mulit_matcher
+    "matcher_config":{                            //协议转换匹配规则。只有匹配改规则的流量才做dubbo到springcloud的转换
+        "matcher_type":"<matcher_type>",          //匹配器类型，用来处理匹配规则 eg:mulit_matcher
       	"config": {
-          "name": "<pluginType>",//匹配规则名称，同协议转换type名称 eg:dubbo2springcloud
+          "name": "<pluginType>",                 //匹配规则名称，同协议转换type名称 eg:dubbo2springcloud
           "variables": [
               {
-                  "name": "<name>",//变量名称 eg: service
+                  "name": "<name>",               //变量名称 eg: x-mosn-data-id
                   "values": [
-                      "<value>"//变量值 eg: reservation-client
+                      "<value>"                   //变量值 eg: reservation-server
                   ],
-                  "operator": "and",//variable的逻辑, and或者or，当variables有多个时，and表示同时
-                  "regex": false //是否是正则匹配
+                  "operator": "and",              //variable的逻辑, and或者or，当variables有多个时，and表示同时
+                  "regex": false                  //是否是正则匹配
               }
           ]
       }
     },
     "rule_info":{//协议转换插件配置信息
         "upstream_protocol":"<upstream_protocol>",//目标协议, 同dst_protocol eg:springcloud
-        "description":"<description>",//插件描述
-        "config":{//协议转换插件配置
+        "description":"<description>",            //插件描述
+        "config":{                                //协议转换插件配置
         }
     }
 }
@@ -104,7 +104,7 @@ func LoadTranscoderFactory(cfg map[string]interface{}) transcoder.Transcoder {
 	return &xr2sp{cfg: cfg}
 }
 ```
-LoadTranscoderFactory方法，接收一个map类型，这个是协议转换插件需要的配置，比如报文映射文件，该配置在egress_config.json(或ingress_config.json)的rule_info.config中提供。实现细节可以参考2.6.1、2.6.2、2.6.3
+LoadTranscoderFactory方法，接收一个map类型，这个是协议转换插件需要的配置，比如报文映射文件，该配置在egress_config.json(或ingress_config.json)的rule_info.config中提供。实现细节可以参考[2.6.1](https://github.com/mosn/extensions/blob/master/go-plugin/doc/2.6.1dubbo2springcloud.md) 、[2.6.2](https://github.com/mosn/extensions/blob/master/go-plugin/doc/2.6.2bolt2springcloud.md) 、2.6.3
 <a name="vGp9B"></a>
 #### 第三步：编译插件
-通过插件脚手架工程，编译插件，参考[1.2.2编译插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6)。<br />
+通过插件脚手架工程，编译插件，参考[1.2.2编译插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6) 。
