--- a/go-plugin/doc/1.plugin-prepare.md
+++ b/go-plugin/doc/1.plugin-prepare.md
@@ -12,13 +12,14 @@
 
 源码主要包括mosn和插件脚手架工程代码。
 
-- mosn源码：商业版mosn代码，分支mecha_dev_master_cloud，用于本地编译调试信息。
+- mosn源码：商业版mosn代码，分支master_cloud，用于本地编译调试信息。
 - 插件代码：用于编写厂商扩展代码，脚手架内已经包含标准演示程序。
 
 运行mosn和开发插件前置条件(mac)：
 
 - 确保[docker](https://www.docker.com/get-started) 已经安装
 - 确保[golang ](https://go.dev/learn/) 已经安装
+- 推荐[goland ide](https://www.jetbrains.com/zh-cn/go/download/#section=mac) 已经安装
 
 ### 1.1.1 mosn源码
 
