--- a/go-plugin/doc/2.6.2bolt2springcloud.md
+++ b/go-plugin/doc/2.6.2bolt2springcloud.md
@@ -45,7 +45,7 @@ bolt 和 springcloud demo 准备,当前使用仓库地址为 [sofastack-mesh-dem
 ##### 插件配置准备
 根据插件开发设计编写插件 egress_config.json、metadata.json ，metadata.json 按照模版填写基础信息即可
 egress_config.json 配置如下：
-```json lines
+```bash
 {
   "type":"bolt2springcloud",           // 插件名字
   "go_plugin_config": {                // 协议转换插件配置
@@ -144,7 +144,7 @@ make ant
 * mosn 启动
 > ``` make start ```
 * 服务路由推送配置
->```json
+>```bash
 >{
 >    "enable_pub": true,
 >    "services": [
