--- a/go-plugin/doc/2.6transcoder.md
+++ b/go-plugin/doc/2.6transcoder.md
@@ -33,7 +33,7 @@
 - metadata.json 包括插件自身元数据配置，包括依赖mosn api/pkg版本以及插件类型为transcoders
 - egress_config.json 客户端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher配置、协议转换规则
 - ingress_config.json 服务端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher配置、协议转换规则
-```json
+```bash
 // metadata.json
 {
 	"name" : "<pluginName>", //插件名称
@@ -45,7 +45,7 @@
 }
 ```
 **说明**：dependencies是插件依赖的外部库的版本，需保持和mosn依赖的相同库的版本一致。如，mosn_api，mosn_pkg，该版本在mosn的go.mod中可以找到。
-```json
+```bash
 // egress_config.json或ingress_config.json 
 {
     "type":"<pluginType>",                        //协议转换type名称，同插件名称，同协议转换目录名称 eg:dubbo2springcloud
