feat: modify conf

--- a/go-plugin/doc/2.6.2bolt2springcloud.md
+++ b/go-plugin/doc/2.6.2bolt2springcloud.md
@@ -1,23 +1,26 @@
 文档修订历史
 
-| 版本号 | 作者 | 备注     | 修订日期  |
-| ------ | ---- | -------- | --------- |
+| 版本号 | 作者                               | 备注     | 修订日期  |
+| ------ |----------------------------------| -------- | --------- |
 | 0.1    | [省善](https://github.com/YIDWang) | 初始版本 | 2022.1.22 |
+| 0.2 | [省善](https://github.com/YIDWang) | 初始版本 | 2022.4.10 |
 
-## 2.4 标准 bolt 和 spring cloud 协议互转实践 —————————— 本地调试篇
-在前面已经介绍过协议转换的接口，下面从设计实现、服务调试两方面介绍 bolt 转 springcloud 协议。 其中 bolt 传输格式采用 json 方式。
+## 2.6.2 标准 bolt 和 spring cloud 协议互转实践 —————————— 本地调试篇
+在前面已经介绍过协议转换的接口，下面从设计实现、本地服务调试两方面介绍 bolt 转 springcloud 协议。 其中 bolt 数据传输格式采用 json 方式。
 
 ### 设计实现
 本次协议转换难点在于如何将 bolt 协议包转换为 springcloud 的协议包。其中协议包分成转换三部分：headers：数据控制针，buf：数据具体信息，trailers：数据控制针。由于 bolt 没有 trailers 且 buf 采用 json 方式数据编码，而 springcloud 同样buf采用json编码格式传输。因此本次只涉及到 header 数据转换。
 #### Accept
-本次协议转换插件只处理 `mosn.io/extensions/go-plugin/pkg/protocol/bolt` 包生产的数据，因此实现如下：
-[Accept](https://github.com/mosn/extensions/blob/d989cd524d04465bec5069de35b019ba31819ef6/go-plugin/plugins/transcoders/bolt2springcloud/main/bolt2sp.go#L52)
+本次协议转换插件只处理 `mosn.io/extensions/go-plugin/pkg/protocol/bolt` 包生产的数据，
+[Accept](https://github.com/mosn/extensions/blob/d989cd524d04465bec5069de35b019ba31819ef6/go-plugin/plugins/transcoders/bolt2springcloud/main/bolt2sp.go#L52) 函数只需要处理两件事情。
+* 判断协议包，是否是 bolt 针。
+* 选择对应接口（method）协议转换的配置。
+
 #### TranscodingRequest
 ##### bolt 转 springcloud header 结构处理
-在微服务中协议转换关键在与路由寻址，开发者需要知道上游和下游寻址关系，例如本次开发事例中 bolt 和 springcloud 通过 `com.alipay.sofa.ms.service.SofaEchoService:1.0` 构建的关系。
+在微服务中协议转换关键在与路由寻址，开发者需要知道上游和下游寻址关系，例如本次开发事例中 bolt 服务名字为 `com.alipay.sofa.ms.service.SofaEchoService:1.0` ，springcloud 服务名字为`http.server` 。
 
-springcloud 是基于 http 协议扩展的，需要解决 http header中 host、path、method 和 bolt 数据对应关系，bolt 协议寻址则通过 service 和 method 负责。从数据流向来看，可以通过 bolt header 获取 service 和 method 信息，根据静态配置或者动态配置查到对应的 http 的映射关系，用于构建 http 的 header 信息。
-当前 mosn 框架处理 http 请求默认处理为 host 为空、path 为 / 、method 为 POST。
+springcloud 是基于 http 协议扩展的，需要思考 http header中 host、path、method 和 bolt 数据对应关系， bolt 协议寻址则通过 service 和 method 负责。目前 mosn 框架会基于 service 进行匹配,依赖 method 进行下游寻址。用户只需要在根据 unique_id 选则对应的配置, 处理 http header 中的，Path、Method 即可。 mosn 框架处理 http 请求默认处理为 host 为空、path 为 / 、method 为 POST。
 
 ![结构处理](./images/bolt-header-transfer.png)
 
@@ -47,53 +50,64 @@ bolt 和 springcloud demo 准备,当前使用仓库地址为 [sofastack-mesh-dem
 egress_config.json 配置如下：
 ```bash
 {
-  "type":"bolt2springcloud",           // 插件名字
-  "go_plugin_config": {                // 协议转换插件配置
-    "so_path":"./bolt2springcloud.so", // Transcoder 插件路径，只在本地调试才需要配置
-    "src_protocol":"bolt",             // 原协议
-    "dst_protocol":"springcloud"       //目标协议
-  },
-  "matcher_config":{
-    "matcher_type": "mulit_matcher" ,  // 默认匹配方式
-    "config": {
-      "name": "bolt2springcloud",
-      "variables": [
-        {
-          "name": "service",
-          "values": [
-            "com.alipay.sofa.ms.service.SofaEchoService:1.0"
-          ],
-          "operator": "and",
-          "regex": false
-        }
-      ]
-    }
-  },
-  "rule_info":{                                                     // 协议转化规则配置
-    "upstream_protocol":"springcloud", 
-    "description":"hello",
-    "config": {                                                     //当前插件静态配置
-        "class":"com.alipay.sofa.rpc.core.response.SofaResponse",   // response转request的 bolt class 信息。
-        "service":"com.alipay.sofa.ms.service.SofaEchoService:1.0", // 路由寻址配置 
-        "com.alipay.sofa.ms.service.SofaEchoService:1.0":{          // request转response映射关系
-            "echo":{
-              "x-mosn-path":"/reservations/hello",
-              "x-mosn-host":"",
-              "x-mosn-method":"GET"
-            }
-        }
-    }
-  },
-  "config": {
-    "User":"admin" 
-  }
+	"type": "bolt2springcloud",
+	"go_plugin_config": {
+		"so_path": "./bolt2springcloud.so",
+		"src_protocol": "bolt",
+		"dst_protocol": "springcloud"
+	},
+	"matcher_config": {
+		"matcher_type": "mulit_matcher",
+		"config": {
+			"name": "bolt2springcloud",
+			"variables": [{
+				"name": "x-mosn-data-id",
+				"values": [
+					"com.alipay.sofa.ms.service.SofaEchoService:1.0" // bolt 注册中的服务名字
+				],
+				"config": {
+					"details": [{
+						"unique_id": "echo",                                 // bolt 函数接口名字
+						"path": "/bolt2springcloud/hello",                   // http path
+						"method": "GET",                                     // http method
+						"target_app": "http.server",                         // http 注册中心名字
+						"class": "com.alipay.sofa.rpc.core.response.SofaResponse" // resp 响应对应的 class
+					}]
+				}
+			}]
+		}
+	},
+	"rule_info": {
+		"upstream_protocol": "springcloud",
+		"description": "hello"
+	},
+	"config": {
+		"User": "admin"
+	}
 }
+```
+备注：matcher_config 字段仅本地调试使用。
+
+#### 订阅(pub_sub)脚本准备
+```bash
+#!/bin/bash
+echo "pub service http.server@springcloud"
+curl -X POST -d '{"protocolType": "springcloud", "providerMetaInfo": { "appName": "springcloud-provider","properties": {"application": "springcloud-provider","port": "18999" }},"serviceName": "http.server@springcloud"}' localhost:13330/services/publish
+sleep 2
+echo "sub service http.server@springcloud"
+curl -X POST -d '{"protocolType":"springcloud","serviceName":"http.server@springcloud"}' localhost:13330/services/subscribe
 ```
 
 #### 打包准备
 目前需要准备协议插件：bolt 、springcloud ，协议转换插件：bolt2springcloud。
 ```shell
 make trans plugin=bolt2springcloud && make codec plugin=bolt trans=bolt2springcloud && make codec plugin=springcloud
+```
+
+#### 环境变量配置
+更新配置 /etc/ant/env_conf 文件中 PLUGINS_ACTIVE 字段 
+```json
+PLUGINS_ACTIVE=[{"kind":"transcoder","plugins":[{"name":"bolt2springcloud","version":"default"}]}]
 ```
 
 #### sidecar 准备
@@ -143,29 +157,7 @@ make ant
 ### 服务调试
 * mosn 启动
 > ``` make start ```
-* 服务路由推送配置
->```bash
->{
->    "enable_pub": true,
->    "services": [
->        {
->            "id": "com.alipay.sofa.ms.service.SofaEchoService:1.0",
->            "parameters": {
->                "protocol": "springcloud",
->                "host": "127.0.0.1:8080"
->            }
->        }
->    ],
->    "references": [
->        {
->            "id": "com.alipay.sofa.ms.service.SofaEchoService:1.0",
->            "parameters": {
->                "protocols": "springcloud,bolt"
->            }
->        }
->    ]
->}
->```
+
 * Goland IDE 启动 sidecar
 
 > ![sidecar 调试](./images/mosn-bolt-debug.jpg)
@@ -174,6 +166,9 @@ make ant
 
 > ![demo springcloud 启动](./images/springcloud-server-debug.png)
 
+* springcloud 发布/订阅
+> sh pub_sub.sh
+ 
 *demo bolt 启动
 
 > ![demo bolt 启动](./images/bolt-client-debug.png)
