--- a/go-plugin/doc/2.6transcoder.md
+++ b/go-plugin/doc/2.6transcoder.md
@@ -1,12 +1,13 @@
 文档修订历史
 
-| 版本号 | 作者 | 备注     | 修订日期  |
-| ------ | ---- | -------- | --------- |
-| 0.1    | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.2.10 |
+| 版本号 | 作者                               | 备注     | 修订日期      |
+|-----|----------------------------------| -------- |-----------|
+| 0.1 | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.2.10 |
+| 0.2 | [省善](https://github.com/yidwang) | 初始版本 | 2022.4.10 |
 
 <a name="LjFmL"></a>
 ## 2.6 协议转换插件
-“协议转换”是将一种协议报文转成另一种协议报文。适用于异构系统之间的互相调用，比如springcloud的服务直接调用dubbo服务，需要实现基于http协议的springcloud报文转换成dubbo协议的报文。“协议转换插件”是实现协议转换的套件。本小节主要介绍如何开发一个协议转换插件，实现细节可以参考2.6.1、2.6.2、2.6.3的协议转换实践。
+“协议转换”是将一种协议报文转成另一种协议报文。适用于异构系统之间的互相调用，比如springcloud的服务直接调用dubbo服务，需要实现基于http协议的springcloud报文转换成dubbo协议的报文。“协议转换插件”是实现协议转换的套件。本小节主要介绍如何开发一个协议转换插件，实现细节可以参考2.6.1、2.6.2、2.6.3的协议转换实践，下面我们先从协议转换基础开始了解。
 <a name="oQOJX"></a>
 #### 第一步：编写插件配置
 ```bash
@@ -16,23 +17,24 @@
 │       └── <pluginName>
 │           ├── egress_config.json		// 客户端协议转换配置
 │           ├── ingress_config.json		// 服务端协议转换配置
-│           ├── metadata.json			// 协议转换插件元数据配置，比如依赖版本信息
+│           ├── metadata.json			// 协议转换插件元数据配置，eg：依赖版本信息
 └── plugins
     └── transcoders				// 目录下存储激活插件代码，eg: dubbo2springcloud
         └── <pluginName>
             └── main				//  go插件规范，需要package为main
-                └── <code>.go			// 插件代码, eg: dubbo2springcloud.go
+                └── <code>.go			//  插件代码, eg: dubbo2springcloud.go
 ```
 
 - configs包括插件配置信息，**协议转换插件配置**都应该存储在transcoders目录中
 - plugins包含插件激活代码，**协议转换插件激活代码**都应该存储在transcoders目录中
 
-**说明**：`<pluginName>`目录名是协议转换插件名称，egress_config.json和ingress_config.json 并不强制同时存在，根据实际场景决定提供egress_config.json或者ingress_config.json即可，分别代表在客户端sdiecar和服务端sidecar执行协议转换逻辑。
+**说明**：`<pluginName>`目录名是协议转换插件名称，egress_config.json和ingress_config.json 并不强制同时存在，根据实际场景决定提供egress_config.json或者ingress_config.json即可，分别代表在客户端sdiecar和服务端sidecar执行协议转换配置。
 
 - go-plugin/plugins/transcoders: 这个路径存放具体协议转换插件目录，并且在目录中创建main目录存放`<code>.go`文件，文件名不限制
 - metadata.json 包括插件自身元数据配置，包括依赖mosn api/pkg版本以及插件类型为transcoders
-- egress_config.json 客户端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher配置、协议转换规则
-- ingress_config.json 服务端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher配置、协议转换规则
+- egress_config.json 客户端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher 静态配置、协议转换规则。
+- ingress_config.json 服务端sidecar处理协议转换逻辑需要的配置，包含协议转换type名称、goplugin配置、matcher 静态配置、协议转换规则。
+- 备至：matcher 静态配置只用于本地调试过程，线上为控制台推送实现。 
 ```bash
 // metadata.json
 {
@@ -48,39 +50,43 @@
 ```bash
 // egress_config.json或ingress_config.json 
 {
-    "type":"<pluginType>",                        //协议转换type名称，同插件名称，同协议转换目录名称 eg:dubbo2springcloud
-    "go_plugin_config":{                          //go plugin插件信息
-        "so_path":"./transcoder-<pluginType>.so", //编译后的插件so文件路径，eg:./transcoder-dubbo2springcloud.so
-        "src_protocol":"<src_protocol>",          //原协议，即协议转换前的协议 eg:dubbo
-        "dst_protocol":"<dst_protocol>"           //目标协议，即协议转换后的协议 eg:springcloud
-    },
-    "matcher_config":{                            //协议转换匹配规则。只有匹配改规则的流量才做dubbo到springcloud的转换
-        "matcher_type":"<matcher_type>",          //匹配器类型，用来处理匹配规则 eg:mulit_matcher
-      	"config": {
-          "name": "<pluginType>",                 //匹配规则名称，同协议转换type名称 eg:dubbo2springcloud
-          "variables": [
-              {
-                  "name": "<name>",               //变量名称 eg: x-mosn-data-id
-                  "values": [
-                      "<value>"                   //变量值 eg: reservation-server
-                  ],
-                  "operator": "and",              //variable的逻辑, and或者or，当variables有多个时，and表示同时
-                  "regex": false                  //是否是正则匹配
-              }
-          ]
-      }
-    },
-    "rule_info":{//协议转换插件配置信息
-        "upstream_protocol":"<upstream_protocol>",//目标协议, 同dst_protocol eg:springcloud
-        "description":"<description>",            //插件描述
-        "config":{                                //协议转换插件配置
-        }
-    }
+	"type": "<pluginType>", //协议转换type名称，同插件名称，同协议转换目录名称 eg:dubbo2springcloud
+	"go_plugin_config": { //go plugin插件信息
+		"so_path": "./transcoder-<pluginType>.so", //编译后的插件so文件路径，eg:./transcoder-dubbo2springcloud.so
+		"src_protocol": "<src_protocol>", //原协议，即协议转换前的协议 eg:dubbo
+		"dst_protocol": "<dst_protocol>" //目标协议，即协议转换后的协议 eg:springcloud
+	},
+	"matcher_config": { //协议转换匹配规则。只有匹配改规则的流量才做dubbo到springcloud的转换
+		"matcher_type": "<matcher_type>", //匹配器类型，用来处理匹配规则 eg:商业版仅支持mulit_matcher
+		"config": {
+			"name": "<pluginType>", //匹配规则名称，同协议转换type名称 eg:dubbo2springcloud
+			"variables": [{
+				"name": "x-mosn-data-id", //变量名称 eg: 目前商业版仅支持 x-mosn-data-id
+				"values": [
+					"<value>" //变量值 eg: reservation-server
+				],
+				"config": { //当前服务的动态配置
+					"details": [{
+						"unique_id": "<mehtod>", //接口名字，于基于 TCP 的协议 x-mosn-method 取值保持一致，基于 HTTP 则由 <uri>.<method>组成。
+						"path": "<http_path>", // 转为 HTTP 协议，需要的 PATH 路径，默认为 /
+						"method": "<http_method>", // 转为 HTTP 协议，需要的 METHOD 方法，默认为POST，eg：GET/POST。
+						"target_app": "<service>", // 目前地协议的 服务标识。
+						"req_mapping": {}， // 请求转换需要的动态配置，用户自定义。
+						"resp_mapping": {} // 响应转换需要的动态配置，用户自定义
+					}]
+				}
+			}]
+		}
+	},
+	"rule_info": { //协议转换插件配置信息
+		"upstream_protocol": "<upstream_protocol>", //目标协议, 同dst_protocol eg:springcloud
+		"description": "<description>", //插件描述
+	}
 }
 ```
 **配置使用说明**：<br />
 1、mosn根据go_plugin_config获取so文件，并通过go plugin机制加载so文件，此时原协议`<src_protocol>`，目标协议`<dst_protocol>`的协议转换插件加载成功<br />
-2、请求流量过mosn，mosn根据matcher_config，选择匹配器`<matcher_type>`。匹配器从mosn请求信息的variables中获取`<name>`，并匹配`<value>`，如果匹配成功则根据当前请求协议和rule_info的目标协议upstream_protocol，选择对应的协议转换插件处理请求流量，并保存协议转换插件到上下文。<br />
+2、请求流量过mosn，mosn根据matcher_config，选择匹配器`<matcher_type>`。匹配器从mosn请求信息的variables中获取`<name>`，并匹配`<value>`，如果匹配成功则根据当前请求协议和rule_info的目标协议upstream_protocol，选择对应的协议转换插件处理请求流量，保存协议转换插件到上下文,并更新插件配置`config`。<br />
 3、响应流量过mosn，从上下文中取协议转换插件，处理响应流量。
 <a name="jiTH5"></a>
 #### 第二步：编写插件代码
@@ -96,15 +102,18 @@ type Transcoder interface {
 	TranscodingResponse(ctx context.Context, headers api.HeaderMap, buf api.IoBuffer, trailers api.HeaderMap) (api.HeaderMap, api.IoBuffer, api.HeaderMap, error)
 }
 ```
-Transcoder的接口实现如上，包含三方面内容：<br />一、实现Accept方法，要求返回一个bool类型，表示是否进行协议转换，false表示不进行协议转换。<br />二、实现TranscodingRequest方法，对请求报文的headers、buf、trailers做转换，返回新协议报文的headers、buf、trailers。<br />三、实现TranscodingResponse方法，对响应报文的headers、buf、trailers做转换，返回新协议报文的headers、buf、trailers。
+Transcoder的接口实现如上，包含三方面内容：<br />
+一、实现Accept方法，要求返回一个bool类型，表示是否进行协议转换，false表示不进行协议转换。<br />
+二、实现TranscodingRequest方法，对请求报文的headers、buf、trailers做转换，返回新协议报文的headers、buf、trailers。<br />
+三、实现TranscodingResponse方法，对响应报文的headers、buf、trailers做转换，返回新协议报文的headers、buf、trailers。
 
-- 实现LoadTranscoderFactory方法
+- 实现 LoadTranscoderFactory 方法
 ```go
 func LoadTranscoderFactory(cfg map[string]interface{}) transcoder.Transcoder {
 	return &xr2sp{cfg: cfg}
 }
 ```
-LoadTranscoderFactory方法，接收一个map类型，这个是协议转换插件需要的配置，比如报文映射文件，该配置在egress_config.json(或ingress_config.json)的rule_info.config中提供。实现细节可以参考[2.6.1](https://github.com/mosn/extensions/blob/master/go-plugin/doc/2.6.1dubbo2springcloud.md) 、[2.6.2](https://github.com/mosn/extensions/blob/master/go-plugin/doc/2.6.2bolt2springcloud.md) 、2.6.3
+LoadTranscoderFactory方法，接收一个map类型，这个是协议转换插件需要的配置，比如报文映射文件，该配置在来源线上由控制台动态推送下来、线下调试可以通过 egress_config.json(或ingress_config.json)的matcher.config中提供。实现细节可以参考[2.6.1](https://github.com/mosn/extensions/blob/master/go-plugin/doc/2.6.1dubbo2springcloud.md) 、[2.6.2](https://github.com/mosn/extensions/blob/master/go-plugin/doc/2.6.2bolt2springcloud.md) 、2.6.3
 <a name="vGp9B"></a>
 #### 第三步：编译插件
 通过插件脚手架工程，编译插件，参考[1.2.2编译插件](https://github.com/mosn/extensions/blob/master/go-plugin/doc/1.plugin-prepare.md#122-%E7%BC%96%E8%AF%91%E6%8F%92%E4%BB%B6) 。
