docs: modify doc name

--- a/go-plugin/doc/2.6transcoder.md
+++ b/go-plugin/doc/2.6transcoder.md
@@ -87,7 +87,8 @@
 **配置使用说明**：<br />
 1、mosn根据go_plugin_config获取so文件，并通过go plugin机制加载so文件，此时原协议`<src_protocol>`，目标协议`<dst_protocol>`的协议转换插件加载成功<br />
 2、请求流量过mosn，mosn根据matcher_config，选择匹配器`<matcher_type>`。匹配器从mosn请求信息的variables中获取`<name>`，并匹配`<value>`，如果匹配成功则根据当前请求协议和rule_info的目标协议upstream_protocol，选择对应的协议转换插件处理请求流量，保存协议转换插件到上下文,并更新插件配置`config`。<br />
-3、响应流量过mosn，从上下文中取协议转换插件，处理响应流量。
+3、响应流量过mosn，从上下文中取协议转换插件，处理响应流量。</br>
+4、unique_id 拼写规范 非http协议与 x-mosn-method 保持一致 ；http 协议拼接为 ${http_url}.${http_method}。 
 <a name="jiTH5"></a>
 #### 第二步：编写插件代码
 
