support multiple platform(arm64/amd64/i386), optimize debugging and remove mesh source dependeny.

--- a/go-plugin/doc/1.plugin-prepare.md
+++ b/go-plugin/doc/1.plugin-prepare.md
@@ -98,6 +98,16 @@ git clone https://github.com/zonghaishang/extensions.git
 
 从脚手架项目`go-plugin/etc/bundle/mosn.zip`解压缩放入到`build/sidecar/binary`中。
 
+解压缩后的mosn文件结构：
+
+```shell
+build
+├── sidecar
+   └── binary
+       ├── mosn
+       └── mosn-1.26.0-5ecd61124.md5
+```
+
 **说明**：商业版mosn.zip不允许放置开源，可以联系邀明或者诣极获取mosn.zip文件。
 
 或者在脚手架根目录编译：
@@ -222,7 +232,7 @@ make debug
 
    ![远程调试](./images/remote_debug.png)
 
-3. 配置好远程调试后，在插件代码打好断点(在2.1小节介绍bolt调试)，点击2次Debug mosn按钮即可
+3. 配置好远程调试后，在插件代码打好断点(在2.1小节介绍bolt调试)，点击Debug mosn按钮即可
 
 ![调试mosn](./images/debug-mosn.png)
 
