build amd64 plugin if detect m1 chip.

--- a/go-plugin/doc/1.plugin-prepare.md
+++ b/go-plugin/doc/1.plugin-prepare.md
@@ -201,6 +201,41 @@ make codec plugin=bolt filter=auth trans=bolt2springcloud
 make clean
 ```
 
+**交叉编译支持：**
+
+- 支持显示指定目标交叉参数(arm64/amd64)
+
+```
+GOOS=linux GOARCH=amd64 make codec plugin=bolt
+```
+
+或者另外一种简写：
+
+```shell
+make codec.amd64 plugin=bolt
+```
+
+> apple m1 chip(arm64) 打包阶段自动触发编译amd64架构插件
+
+在苹果mac m1 芯片一下命令，打包阶段自动重新编译linux amd64架构插件，方便公共一套linux sidecar容器。
+```shell
+make pkg-codec plugin=bolt
+```
+
+如果需要明确交叉编译插件，比如arm64插件，可以执行以下命令：
+
+```shell
+make pkg-codec.arm64 plugin=bolt
+```
+
+该命令等价于:
+
+```shell
+GOOS=linux GOARCH=arm64 DOCKER_BUILD_OPTS="--platform=linux/arm64" make pkg-codec plugin=bolt
+```
+
+- DOCKER_BUILD_OPTS 是传递给docker的编译参数，需要和传递给go `os/arch`架构一致。
+
 ### 1.2.3 编译调试
 
 以下命令执行都在go-plugin根项目中执行，启动mosn调试命令：
